# TeaDB

./: .gitignore  CMakeLists.txt  README.md
resources/: logo.rc
src/: Makefile  cli_main.cpp  main.cpp  query_db.cpp  query_db.h  qwaiting.cpp  qwaiting.h  qwaiting.ui  teadbgui.cpp  teadbgui.h  teadbgui.ui  ui_qwaiting.h  ui_teadbgui.h
src/script/: create_db.py
